Login and Reset Password

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -52,12 +52,12 @@
         android:text="@string/register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/BackToMain"
+        app:layout_constraintStart_toEndOf="@+id/backToMain"
         app:layout_constraintTop_toBottomOf="@+id/password"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/BackToMain"
+        android:id="@+id/backToMain"
         android:layout_width="136dp"
         android:layout_height="48dp"
         android:layout_marginTop="78dp"
