--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,6 +16,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.BebeAppThatWorks" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
+    <style name="Base.Theme.BebeAppThatWorks.PopupOverlay" parent="Theme.AppCompat.DayNight.DarkActionBar"/>
+
 </resources>
