--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,19 +5,12 @@
     android:id="@+id/home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Home">
+    tools:context=".AttendeeActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/Base.Theme.BebeAppThatWorks.PopupOverlay">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:popupTheme="@style/Base.Theme.BebeAppThatWorks.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -30,8 +23,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="56dp"
-        android:background="@android:color/transparent">
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        android:background="@android:color/transparent"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
