--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,22 +3,22 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/navigation_home"
+            android:id="@+id/Events"
             android:icon="@drawable/mainpage"
             android:title="Home"/>
 
         <item
-            android:id="@+id/navigation_myevents"
+            android:id="@+id/MyEvents"
             android:icon="@drawable/myevents"
             android:title="My Events"/>
 
         <item
-            android:id="@+id/navigation_notifications"
+            android:id="@+id/Notifications"
             android:icon="@drawable/notifications"
             android:title="Notifications"/>
 
         <item
-            android:id="@+id/navigation_profile"
+            android:id="@+id/Profile"
             android:icon="@drawable/profile"
             android:title="Profile"/>
     </group>
