--- a/app/src/main/res/layout/attendee_layout.xml
+++ b/app/src/main/res/layout/attendee_layout.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_home">
+    tools:showIn="@layout/activity_attendee">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/navigation_host_fragment_content_main"
