Reset password active and stay logged in.

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -39,7 +39,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="5dp"
         android:backgroundTint="#A22F99"
-        android:text="Send Code"
+        android:text="Send Email"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/backToLoginPage"
