--- a/app/src/main/res/layout/fragment_profile_attendee.xml
+++ b/app/src/main/res/layout/fragment_profile_attendee.xml
@@ -17,6 +17,6 @@
         android:id="@+id/LOGOUTBUTTON"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="Log out" />
 
 </FrameLayout>
