--- a/app/src/main/res/layout/activity_event_creation.xml
+++ b/app/src/main/res/layout/activity_event_creation.xml
@@ -10,7 +10,31 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ui.login.LoginActivity">
+    tools:context=".ui.eventCreation.EventCreationActivity">
+
+    <Button
+        android:id="@+id/button_capture"
+        android:layout_width="136dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="78dp"
+        android:layout_marginEnd="5dp"
+        android:text="Set Event Cover"
+        android:onClick="captureImage"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:id="@+id/cover_image"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_above="@+id/button_capture"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        app:layout_constraintTop_toBottomOf="@+id/button_capture"
+        tools:ignore="MissingConstraints" />
+
 
 
     <EditText
@@ -24,6 +48,8 @@
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cover_image"
+
         tools:ignore="MissingConstraints" />
 
     <EditText
