--- a/app/src/main/res/layout/activity_event_creation.xml
+++ b/app/src/main/res/layout/activity_event_creation.xml
@@ -16,26 +16,25 @@
         android:id="@+id/button_capture"
         android:layout_width="136dp"
         android:layout_height="48dp"
-        android:layout_marginTop="78dp"
-        android:layout_marginEnd="5dp"
-        android:text="Set Event Cover"
+        android:layout_marginStart="136dp"
+        android:layout_marginBottom="648dp"
         android:onClick="captureImage"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="Set Event Cover"
 
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     <ImageView
         android:id="@+id/cover_image"
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:layout_above="@+id/button_capture"
-        android:scaleType="centerCrop"
         android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
         app:layout_constraintTop_toBottomOf="@+id/button_capture"
-        tools:ignore="MissingConstraints" />
-
-
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="96dp" />
 
     <EditText
         android:id="@+id/idEdtEventName"
