--- a/app/src/main/res/layout/fragment_events_list.xml
+++ b/app/src/main/res/layout/fragment_events_list.xml
@@ -6,8 +6,9 @@
     android:name="com.example.bebeappthatworks.ItemFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
+    android:layout_marginLeft="0dp"
+    android:layout_marginRight="0dp"
     app:layoutManager="LinearLayoutManager"
+    android:background="@drawable/bg_with_stars"
     tools:context=".EventsFragment"
     tools:listitem="@layout/fragment_events" />
