--- a/app/src/main/res/layout-land/fragment_events.xml
+++ b/app/src/main/res/layout-land/fragment_events.xml
@@ -8,8 +8,8 @@
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="637dp"
-        android:layout_height="wrap_content"
+        android:layout_width="646dp"
+        android:layout_height="293dp"
         android:layout_gravity="center"
         android:layout_marginStart="19dp"
         android:layout_marginTop="40dp"
