--- a/app/src/main/res/layout/attendee_layout.xml
+++ b/app/src/main/res/layout/attendee_layout.xml
@@ -29,8 +29,8 @@
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_nav_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:itemBackground="@color/white"
             app:menu="@menu/bottom_nav_menu" />
 
