--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -6,8 +6,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
 
-
-
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -29,8 +27,8 @@
 
             <ImageView
                 android:id="@+id/content"
-                android:layout_width="300dp"
-                android:layout_height="188dp"
+                android:layout_width="315dp"
+                android:layout_height="193dp"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/text_margin"
                 android:scaleType="centerCrop"
@@ -41,15 +39,24 @@
                 tools:ignore="MissingConstraints" />
 
             <TextView
-                android:id="@+id/details"
+                android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
+                android:layout_gravity="center"
                 android:layout_margin="@dimen/text_margin"
                 android:textAppearance="?attr/textAppearanceListItem"
                 android:textColor="@color/white"
-                app:layout_constraintTop_toBottomOf="@+id/content"
-                tools:layout_editor_absoluteX="80dp" />
+                app:layout_constraintTop_toBottomOf="@+id/content"/>
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/text_margin"
+                android:textAppearance="?attr/textAppearanceListItem"
+                android:textColor="@color/white"
+                app:layout_constraintTop_toBottomOf="@+id/content"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
