--- a/app/src/main/res/layout/activity_event_creation.xml
+++ b/app/src/main/res/layout/activity_event_creation.xml
@@ -12,29 +12,33 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".ui.eventCreation.EventCreationActivity">
 
+
     <Button
         android:id="@+id/button_capture"
-        android:layout_width="136dp"
+        android:layout_width="170dp"
         android:layout_height="48dp"
-        android:layout_marginStart="136dp"
-        android:layout_marginBottom="648dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginBottom="608dp"
         android:onClick="captureImage"
         android:text="Set Event Cover"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-
     <ImageView
         android:id="@+id/cover_image"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
+        android:layout_width="300dp"
+        android:layout_height="188dp"
         android:layout_above="@+id/button_capture"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/text_margin"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
+        android:textAppearance="?attr/textAppearanceListItem"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.531"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_capture"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="96dp" />
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/idEdtEventName"
@@ -48,7 +52,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cover_image"
-
         tools:ignore="MissingConstraints" />
 
     <EditText
@@ -115,13 +118,12 @@
         android:id="@+id/idBtnSubmitEvent"
         android:layout_width="136dp"
         android:layout_height="48dp"
-        android:layout_marginTop="78dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="70dp"
         android:text="Create Event"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/idEdtEventDate"
         app:layout_constraintVertical_bias="0.0" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
