--- a/app/src/main/res/layout/activity_attendee.xml
+++ b/app/src/main/res/layout/activity_attendee.xml
@@ -5,7 +5,8 @@
     android:id="@+id/home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AttendeeActivity">
+    tools:context=".AttendeeActivity"
+    >
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
