--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,20 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
-    android:background="#2C1854"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@drawable/bg_with_stars"
     tools:context=".ui.login.LoginActivity">
 
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="304dp"
-        android:layout_height="54dp"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
         android:layout_marginTop="4dp"
         android:background="#9A8FAF"
         android:hint="@string/prompt_password"
@@ -31,8 +31,8 @@
 
     <EditText
         android:id="@+id/username"
-        android:layout_width="304dp"
-        android:layout_height="59dp"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
         android:layout_marginTop="416dp"
         android:background="#9A8FAF"
         android:hint="@string/prompt_email"
@@ -72,8 +72,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="255dp"
-        android:layout_height="245dp"
+        android:layout_width="213dp"
+        android:layout_height="217dp"
         app:layout_constraintBottom_toTopOf="@+id/username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
