--- a/app/src/main/res/layout/activity_organiser.xml
+++ b/app/src/main/res/layout/activity_organiser.xml
@@ -2,10 +2,10 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/attendeeHome"
+    android:id="@+id/organiserHome"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AttendeeActivity"
+    tools:context=".OrganiserActivity"
     >
 
     <com.google.android.material.appbar.AppBarLayout
@@ -16,9 +16,9 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <include
-        android:id="@+id/attendee_layout"
-        layout="@layout/attendee_layout" />
-    
+        android:id="@+id/organiser_layout"
+        layout="@layout/organiser_layout" />
+
 
     <!-- This CoordinatorLayout is to dodge the BottomNavigationView when the Snackbar is shown -->
     <androidx.coordinatorlayout.widget.CoordinatorLayout
