--- a/app/src/main/res/menu/bottom_nav_organiser.xml
+++ b/app/src/main/res/menu/bottom_nav_organiser.xml
@@ -14,8 +14,8 @@
 
         <item
             android:id="@+id/Notifications"
-            android:icon="@drawable/notifications"
-            android:title="Create Event"/>
+            android:icon="@drawable/newevent"
+            android:title="New Event"/>
 
         <item
             android:id="@+id/Profile"
