--- a/app/src/main/res/layout/activity_register_organisation.xml
+++ b/app/src/main/res/layout/activity_register_organisation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
-    android:background="#2C1854"
+    android:background="@drawable/bg_with_stars"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
