--- a/app/src/main/res/layout/fragment_one_event.xml
+++ b/app/src/main/res/layout/fragment_one_event.xml
@@ -2,15 +2,15 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/one"
+    android:name="com.example.bebeappthatworks.One"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/one"
-    android:name="com.example.bebeappthatworks.OneItemFragment"
     android:layout_marginLeft="0dp"
     android:layout_marginRight="0dp"
     app:layoutManager="LinearLayoutManager"
     android:background="@drawable/bg_with_stars"
     tools:context=".OneEventFragment"
-    tools:listitem="@layout/fragment_events">
+    tools:showIn="@layout/layout_one_event">
 
 </androidx.recyclerview.widget.RecyclerView>
