--- a/app/src/main/res/layout/layout_one_event.xml
+++ b/app/src/main/res/layout/layout_one_event.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".AttendeeActivity">
+    android:background="@drawable/bg_with_stars"
+    tools:context=".OneEventActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -133,16 +134,6 @@
                 android:textColor="@color/white"
                 app:layout_constraintStart_toEndOf="@id/time"
                 app:layout_constraintTop_toBottomOf="@+id/time" />
-
-            <Button
-                android:id="@+id/moreDetails"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:onClick="buttonPlease"
-                android:text="@string/more_details"
-                app:layout_constraintTop_toBottomOf="@+id/capacity"
-                tools:ignore="MissingConstraints" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
