--- a/app/src/main/res/layout/fragment_single_event.xml
+++ b/app/src/main/res/layout/fragment_single_event.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/one"
+    android:name="com.example.bebeappthatworks.One"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SingleEvent">
+    android:layout_marginLeft="0dp"
+    android:layout_marginRight="0dp"
+    app:layoutManager="LinearLayoutManager"
+    android:background="@drawable/bg_with_stars"
+    tools:context=".SingleEventFree"
+    tools:showIn="@layout/layout_one_event">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+</androidx.recyclerview.widget.RecyclerView>
