--- a/app/src/main/res/layout/fragment_my_events_attendee.xml
+++ b/app/src/main/res/layout/fragment_my_events_attendee.xml
@@ -2,16 +2,18 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/one"
-    android:name="com.example.bebeappthatworks.One"
+    android:id="@+id/list"
+    android:name="com.example.bebeappthatworks.ItemFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="0dp"
     android:layout_marginRight="0dp"
     app:layoutManager="LinearLayoutManager"
     android:background="@drawable/bg_with_stars"
-    tools:context=".SingleEventFree"
-    tools:showIn="@layout/layout_one_event">
+    tools:context=".MyEventsAttendee"
+    tools:listitem="@layout/fragment_events"
 
-</androidx.recyclerview.widget.RecyclerView>
+    />
+
+
 
