--- a/app/src/main/res/layout/event_def.xml
+++ b/app/src/main/res/layout/event_def.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_with_stars"
-    tools:context=".MyEventsFragment">
+    tools:context=".AttendeeActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -91,6 +91,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="64dp"
         android:text="See Location"
+        android:onClick="openMaps"
         app:layout_constraintBottom_toTopOf="@+id/text_description"
         app:layout_constraintStart_toEndOf="@+id/EventLocation"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
