--- a/app/src/main/res/layout/activity_guest.xml
+++ b/app/src/main/res/layout/activity_guest.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".GuestActivity">
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/listGuest"
+android:name="com.example.bebeappthatworks.ItemFragmentGuest"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:layout_marginLeft="0dp"
+android:layout_marginRight="0dp"
+app:layoutManager="LinearLayoutManager"
+android:background="@drawable/bg_with_stars"
+tools:context=".GuestActivity"
+tools:listitem="@layout/fragment_events"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    />
+
+
+
