--- a/app/src/main/res/layout/fragment_profile_attendee.xml
+++ b/app/src/main/res/layout/fragment_profile_attendee.xml
@@ -41,13 +41,17 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="227dp"
-        android:layout_height="203dp"
+        android:layout_width="287.55dp"
+        android:layout_height="287.55dp"
         android:layout_marginTop="68dp"
         android:src="@drawable/profileicon"
+        android:scaleType="centerCrop"
+        android:background="@drawable/circle_background"
+        android:clipToOutline="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <Button
         android:id="@+id/addprofilepic"
